// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`userStore > should init with an empty user 1`] = `
{
  "githubUser": {},
  "inputValue": "",
  "userName": undefined,
}
`;

exports[`userStore > should search user  1`] = `
{
  "githubUser": {
    "status": 200,
    "user": {
      "avatar_url": "https://avatars.githubusercontent.com/u/10590076?v=4",
      "bio": "lorem ipsum dolor sit amet",
      "followers": 0,
      "following": 5,
      "html_url": "https://github.com/testeuser",
      "location": "Brazil",
      "login": "testeuser",
      "name": "Teste User",
      "public_repos": 5,
      "repos_url": "https://api.github.com/users/testeuser/repos",
    },
  },
  "inputValue": "resolveTest",
  "userName": "Teste User",
}
`;

exports[`userStore > should search user error 1`] = `
{
  "githubUser": {
    "status": 404,
    "user": {},
  },
  "inputValue": "rejectTest",
}
`;

exports[`userStore > should set input value 1`] = `
{
  "githubUser": {},
  "inputValue": "teste",
  "userName": undefined,
}
`;
